# psique

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  README.rst  local.env  manage.py  pyproject.toml
core/: admin.py  models.py  serializers.py  views.py
core/migrations/: 0001_initial.py
psique/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
psique/apps/core/: admin.py  api.py  fields.py  models.py  routes.py  serializers.py
psique/apps/core/migrations/: 0001_initial.py
psique/psique/: settings.py  urls.py  wsgi.py
psique/tests/: conftest.py
psique/tests/core/: factories.py  test_models.py
psique/utils/: settings.py
tests/: test_psique.py
